@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010-2021 BSI Business Systems Integration AG.
+ * Copyright (c) 2010-2022 BSI Business Systems Integration AG.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -11,7 +11,6 @@
 package org.eclipse.scout.sdk.core.model.api;
 
 import static java.util.Comparator.comparing;
-import static java.util.stream.Collectors.toList;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotEquals;
@@ -37,8 +36,7 @@ public class PropertyBeanTest {
     var propTestClass = env.requireType(PropertyTestClass.class.getName());
     var propTestClass2 = env.requireType(PropertyTestClass2.class.getName());
     var propertyBeans = PropertyBean.of(propTestClass)
-        .sorted(comparing(PropertyBean::name))
-        .collect(toList());
+        .sorted(comparing(PropertyBean::name)).toList();
 
     assertEquals(5, propertyBeans.size());
 
