@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010-2021 BSI Business Systems Integration AG.
+ * Copyright (c) 2010-2022 BSI Business Systems Integration AG.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -10,7 +10,6 @@
  */
 package org.eclipse.scout.sdk.core.model.api.internal;
 
-import static java.util.stream.Collectors.toList;
 import static org.eclipse.scout.sdk.core.util.Ensure.newFail;
 import static org.eclipse.scout.sdk.core.util.JavaTypes.arrayMarker;
 
@@ -232,7 +231,7 @@ public class TypeImplementor extends AbstractMemberImplementor<TypeSpi> implemen
     }
 
     // type arguments
-    var typeArgs = type.typeArguments().collect(toList());
+    var typeArgs = type.typeArguments().toList();
     if (!typeArgs.isEmpty()) {
       builder.append(JavaTypes.C_GENERIC_START);
       buildReferenceRec(typeArgs.get(0), false, builder);
