@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010-2021 BSI Business Systems Integration AG.
+ * Copyright (c) 2010-2022 BSI Business Systems Integration AG.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -9,8 +9,6 @@
  *     BSI Business Systems Integration AG - initial API and implementation
  */
 package org.eclipse.scout.sdk.s2e.ui.internal.lookupcall;
-
-import static java.util.stream.Collectors.toList;
 
 import java.util.Optional;
 
@@ -237,11 +235,11 @@ public class LookupCallNewWizardPage extends AbstractCompilationUnitNewWizardPag
       m_keyTypeField.setEnabled(false);
     }
     else {
-      var typeParameters = m_provider.toScoutType(superType).typeParameters().collect(toList());
+      var typeParameters = m_provider.toScoutType(superType).typeParameters().toList();
       var typeParamAvailable = !typeParameters.isEmpty();
       m_keyTypeField.setEnabled(typeParamAvailable);
       if (typeParamAvailable) {
-        var bounds = typeParameters.get(0).bounds().collect(toList());
+        var bounds = typeParameters.get(0).bounds().toList();
         var typeContentProvider = (StrictHierarchyTypeContentProvider) m_keyTypeField.getContentProvider();
         if (bounds.isEmpty()) {
           typeContentProvider.setBaseClassFqn(null);
